add more configuration, run with different setups, summary